# pass

./: .gitignore  README.md  cli.py  pyproject.toml  test_cli.py
app/: cli.py
env/: pyvenv.cfg
pass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: colours.py
src/processor/: process_things.py
tests/: test_cli.py
